<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mover"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/mover"
            android:iconTint="@color/purple_500" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_placeholder"
            android:iconTint="@color/purple_500"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/nav_manager"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/manager"
            android:iconTint="@color/purple_500"/>
    </group>
</menu>